# Backend

./: pyproject.toml
avtogit/: __main__.py  analyst.py  errors.py
avtogit/views/: detail.py
