[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vladislav Gorokhov <gvsnbala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
pydantic = "^1.9.1"
orjson = "^3.7.8"
flake8 = "^4.0.1"
mypy = "^0.971"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
